--- a/WebApplication6/Views/Shared/_Layout.cshtml
+++ b/WebApplication6/Views/Shared/_Layout.cshtml
@@ -8,8 +8,8 @@
     <title>Pustok - Book Store HTML Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Use Minified Plugins Version For Fast Page Load -->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/plugins.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="~/css/plugins.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="~/css/main.css" />
     <link rel="shortcut icon" type="image/x-icon" href="image/favicon.ico">
 </head>
 
@@ -21,7 +21,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-3 ">
                             <a href="index.html" class="site-brand">
-                                <img src="image/logo.png" alt="">
+                                <img src="~/image/logo.png" alt="">
                             </a>
                         </div>
                         <div class="col-lg-3">
@@ -302,7 +302,7 @@
                                             <div class=" single-cart-block ">
                                                 <div class="cart-product">
                                                     <a href="product-details.html" class="image">
-                                                        <img src="image/products/cart-product-1.jpg" alt="">
+                                                        <img src="~/image/products/cart-product-1.jpg" alt="">
                                                     </a>
                                                     <div class="content">
                                                         <h3 class="title"><a href="product-details.html">Kodak PIXPRO
@@ -336,7 +336,7 @@
                     <div class="row align-items-sm-end align-items-center">
                         <div class="col-md-4 col-7">
                             <a href="index.html" class="site-brand">
-                                <img src="image/logo.png" alt="">
+                                <img src="~/image/logo.png" alt="">
                             </a>
                         </div>
                         <div class="col-md-5 order-3 order-md-2">
@@ -639,7 +639,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4">
                         <a href="index.html" class="site-brand">
-                            <img src="image/logo.png" alt="">
+                            <img src="~/image/logo.png" alt="">
                         </a>
                     </div>
                     <div class="col-lg-8">
@@ -777,7 +777,7 @@
                     <div class="container">
                         <div class="home-content text-center text-sm-left position-relative">
                             <div class="hero-partial-image image-right">
-                                <img src="image/bg-images/home-slider-2-ai.png" alt="">
+                                <img src="~/image/bg-images/home-slider-2-ai.png" alt="">
                             </div>
                             <div class="row no-gutters ">
                                 <div class="col-xl-6 col-md-6 col-sm-7">
@@ -798,7 +798,7 @@
                     <div class="container">
                         <div class="home-content text-center text-sm-left position-relative">
                             <div class="hero-partial-image image-left">
-                                <img src="image/bg-images/home-slider-1-ai.png" alt="">
+                                <img src="~/image/bg-images/home-slider-1-ai.png" alt="">
                             </div>
                             <div class="row align-items-center justify-content-start justify-content-md-end">
                                 <div class="col-lg-6 col-xl-7 col-md-6 col-sm-7">
@@ -824,7 +824,7 @@
             <div class=" col-xl-3 col-lg-4 col-sm-6">
                 <div class="single-footer pb--40">
                     <div class="brand-footer footer-title">
-                        <img src="image/logo--footer.png" alt="">
+                        <img src="~/image/logo--footer.png" alt="">
                     </div>
                     <div class="footer-contact">
                         <p>
@@ -903,7 +903,7 @@
                 magna volutpat, posuere eros
             </p>
             <a href="#" class="payment-block">
-                <img src="image/icon/payment.png" alt="">
+                <img src="~/image/icon/payment.png" alt="">
             </a>
             <p class="copyright-text">
                 Copyright © 2019 <a href="#" class="author">Pustok</a>. All Right Reserved.
@@ -914,9 +914,9 @@
     </div>
 </footer>
 <!-- Use Minified Plugins Version For Fast Page Load -->
-<script src="js/plugins.js"></script>
-<script src="js/ajax-mail.js"></script>
-<script src="js/custom.js"></script>
+<script src="~/js/plugins.js"></script>
+<script src="~/js/ajax-mail.js"></script>
+<script src="~/js/custom.js"></script>
 </body>
 
 
